welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:11: error: ')' expected but 'else' found.
	else if ((b <= 20) && (b >= 10)){
        ^